[package]
name = "glyphon"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/grovesNL/glyphon.git"
repository = "https://github.com/grovesNL/glyphon"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = "0.15"
etagere = "0.2.6"
cosmic-text = { git = "https://github.com/hecrj/cosmic-text.git", rev = "ad111a1df10d5da503620f4b841de5d41ebd4e73" }
lru = "0.9"

[dev-dependencies]
winit = "0.27.0"
pollster = "0.2.5"
