[package]
name = "glyphon"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/grovesNL/glyphon.git"
repository = "https://github.com/grovesNL/glyphon"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = "0.16"
etagere = "0.2.6"
cosmic-text = { git = "https://github.com/hecrj/cosmic-text.git", rev = "e8b10fd675832cb9c1cc9de30922beb4cf883876" }
lru = "0.9"

[dev-dependencies]
winit = "0.27.0"
pollster = "0.2.5"
